# metacmd

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  create_release.yaml  page.yaml
scripts/: bump_version.py  get_changelog.py  util.py
scripts/ci/: bump_version.py  get_changelog.py  get_version.py
scripts/gh/: pr_merge.py
src/: lib.rs
